# wahl-o-mat

./: README.md  app.py  config.yml  download.sh  pyproject.toml
data/interim/2025/: .gitignore
notebooks/: 01-exploration.ipynb
