[tool.poetry]
name = "wahl-o-mat"
version = "0.1.0"
description = ""
authors = ["Excidion <36995046+Excidion@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.21.0"
plotly = "^6.0.0"
streamlit = "^1.42.0"
pyyaml = "^6.0.2"
dash-bio = "^1.0.2"
scikit-learn = "^1.6.1"
llvmlite = ">=0.39.0dev0,<0.40"
umap-learn = "^0.5.7"
fastexcel = "^0.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
